--- a/t_discografico.html
+++ b/t_discografico.html
@@ -169,6 +169,13 @@
               <table width="548" height="1569" border="0" cellpadding="2" id="discos">
 
                 <tr>
+                  <td width="130" height="20"><h3>2012</h3></td>
+                </tr>
+                <tr>
+                  <td><a href="http://www.jamendo.com/es/album/122479" target="_blank"><img src="imagenes/portadas/4manospiano.jpg" border="0" /></a></td>
+                </tr>
+
+                <tr>
                   <td width="130" height="20"><h3>2011</h3></td>
                 </tr>
                 <tr>
